修复bug：Dependency Graph中可能存在自环，Tarjan算法会将其忽略